hard-gists/287dbf64163fda470c89e8b992e112e0/run.log
=== Docker Run Log for 287dbf64163fda470c89e8b992e112e0 ===
Started at: Mi 29. Okt 13:19:07 CET 2025

[2025-10-29 13:19:08] START: Running container for 287dbf64163fda470c89e8b992e112e0
[2025-10-29 13:19:08] SUCCESS: Container 16d29dc5da3e9ed9e63383e662716999aeda305507c4a7315fa39124b2aafb01 started for 287dbf64163fda470c89e8b992e112e0
=== Container logs for 287dbf64163fda470c89e8b992e112e0 ===
  File "/snippet.py", line 88
    print 'error with sampling ensemble'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 287dbf64163fda470c89e8b992e112e0 ===
[2025-10-29 13:19:10] INFO: Container 16d29dc5da3e9ed9e63383e662716999aeda305507c4a7315fa39124b2aafb01 has stopped
